infra/k8s/gke/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: musing-heisenberg-956263ff29-route
  namespace: apps-release
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lcnc-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "cc1fbde45ead-in-south-02.mayson.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /us-east-1-backstractelb-8278b6-coll-37552dbc44b945fb8d0eaf74197a9542
      backendRefs:
        - name: musing-heisenberg-956263ff29-srv
          port: 80
